@@ -18,6 +18,9 @@
 	* gkr/seahorse-gkr-source.c: Refresh keyring sources when the main
 	gkr source is refreshed.
 	
+	* gkr/seahorse-gkr-keyring-commands.c: Refresh all keyrings when the 
+	status of a keyring changes. For example lock/unlock, set default etc..
+	
 2009-02-01  Stef Walter  <stef@memberwebs.com>
 
 	* gkr/seahorse-gkr-source.c: Don't show the session keyring.
